--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Hoteru</title>
 </head>
 <body>
@@ -29,7 +30,7 @@
         <p>Quiet places in the heart of city</p>
       </main>
       <section id="section">
-        <div id="about">
+        <div data-aos="fade-left" data-aos-duration="2000" data-aos-easing="ease-in-out" id="about">
           <div class="article-abt">
             <h1>About</h1>
             <p>Japan Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis vero quas atque similique expedita labore vel commodi consequatur aperiam ipsum cumque illo esse blanditiis illum voluptatibus dolorum, nemo voluptatem dolore!.</p>
@@ -38,8 +39,8 @@
             <img src="https://images.unsplash.com/photo-1540959733332-eab4deabeeaf?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1371&q=80" alt="">
           </div>
         </div>
-        <div id="cards">
-          <div class="card">
+        <div data-aos="fade-up" data-aos-delay="50" data-aos-duration="2500" data-aos-easing="ease-in-out" id="cards">
+          <div  class="card">
             <img src="https://images.unsplash.com/photo-1524413840807-0c3cb6fa808d?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" alt="trees">
             <h3>Night Sakura</h3>
             <p>Stunning Night Lights by the river</p>
@@ -70,5 +71,9 @@
     </div>
 
     <script src="./main.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
