added aos on title

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </button>
       </header>
       <main id="main">
-        <h1>ホテル</h1>
+        <h1 data-aos="fade-up" data-aos-duration="2000" data-aos-easing="ease-in-out" >ホテル</h1>
         <p>Quiet places in the heart of city</p>
       </main>
       <section id="section">
