--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <title>Hoteru</title>
 </head>
 <body>
@@ -17,7 +18,6 @@
         <ul id="nav-links">
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
-          <li><a href="#">Apartments</a></li>
           <li><a href="#">News</a></li>
           <li><a href="#">Contacts</a></li>
         </ul>
@@ -71,9 +71,9 @@
         <div id="logo"><h1>Hoteru</h1></div>
         <div id="social">
           <ul id="social-link">
-            <li><a href="">INSTAGRAM</a></li>
-            <li><a href="">FACEBOOK</a></li>
-            <li><a href="">YOUTUBE</a></li>
+            <li><a href=""><i class="fab fa-instagram"></i></a></li>
+            <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href=""><i class="fab fa-youtube"></i></a></li>
           </ul>
         </div>
         <h3>Copyright &copy;2021 by Ricky A.</h3>
