--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <footer id="footer">
         <div id="logo"><h1>Hoteru</h1></div>
         <div id="social">
-          <ul id="social-link">
+          <ul data-aos="fade-up" data-aos-duration="2000" data-aos-easing="ease-in-out" id="social-link">
             <li><a href=""><i class="fab fa-instagram"></i></a></li>
             <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
             <li><a href=""><i class="fab fa-youtube"></i></a></li>
