--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
       </section>
       <footer id="footer">
-        <div id="logo"><h1>Hoteru</h1></div>
+        <div data-aos="fade-right" data-aos-duration="2000" data-aos-easing="ease-in-out" id="logo"><h1>Hoteru</h1></div>
         <div id="social">
           <ul data-aos="fade-up" data-aos-duration="2000" data-aos-easing="ease-in-out" id="social-link">
             <li><a href=""><i class="fab fa-instagram"></i></a></li>
@@ -76,7 +76,7 @@
             <li><a href=""><i class="fab fa-youtube"></i></a></li>
           </ul>
         </div>
-        <h3>Copyright &copy;2021 by Ricky A.</h3>
+        <h3 data-aos="fade-left" data-aos-duration="2000" data-aos-easing="ease-in-out">Copyright &copy;2021 by Ricky A.</h3>
       </footer>
     </div>
 
