added nav responsive

--- a/index.html
+++ b/index.html
@@ -11,20 +11,25 @@
 </head>
 <body>
     <div class="container">
+
       <header id="header">
-        <div id="logo">
-          <h1>Hoteru</h1>
+        <div class="container">
+          <nav>
+            <div class="logo"><h3>Hoteru</h3></div>
+            <button class="hamburger" id="hamburger">
+              <i class="fas fa-bars"></i>
+            </button>
+            <ul class="nav-ul" id="nav-ul">
+              <li><a href="">Home</a></li>
+              <li><a href="#Gallery">Gallery</a></li>
+              <li><a href="#Contact">Contact</a></li>
+              <li><a href="#About">About</a></li>
+            </ul>
+          </nav>
         </div>
-        <ul id="nav-links">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">News</a></li>
-          <li><a href="#">Contacts</a></li>
-        </ul>
-        <button id="contact-us">
-          Contact us
-        </button>
       </header>
+
+
       <main id="main">
         <h1 data-aos="fade-up" data-aos-duration="2000" data-aos-easing="ease-in-out" >ホテル</h1>
         <p>Quiet places in the heart of city</p>
