--- a/index.html
+++ b/index.html
@@ -68,8 +68,16 @@
           <div class="article-abt">
             <h1>News</h1>
             <p>Japan Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis vero quas atque similique expedita labore vel commodi consequatur aperiam ipsum cumque illo esse blanditiis illum voluptatibus dolorum, nemo voluptatem dolore!.</p>
+          </div> 
+        </div>
+        <div data-aos="fade-right" data-aos-duration="2000" data-aos-easing="ease-in-out" id="about">
+          <div class="article-abt">
+            <h1>What's New</h1>
+            <p>Japan Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis vero quas atque similique expedita labore vel commodi consequatur aperiam ipsum cumque illo esse blanditiis illum voluptatibus dolorum, nemo voluptatem dolore!.</p>
+          </div> 
+          <div class="img-abt">
+            <img src="https://images.unsplash.com/photo-1528360983277-13d401cdc186?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="">
           </div>
-          
         </div>
       </section>
       <footer id="footer">
